[package]
name = "ts_tunnel"
version.workspace = true
description = "secure packet tunnel over udp (ShadowVPN PSK + QUIC obfuscation)"
categories = ["cryptography", "network-programming", "encoding"]
keywords = ["tailscale", "shadowvpn", "shadowsocks", "tunnel", "udp"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_keys.workspace = true
ts_packet.workspace = true
ts_time.workspace = true

# AEAD ciphers (RustCrypto), sharing the `aead` 0.5 traits.
aead.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true

# Key derivation: HKDF-SHA1 subkeys + MD5-based EVP_BytesToKey master key,
# matching the shadowsocks AEAD UDP scheme.
hkdf.workspace = true
sha1.workspace = true
md-5.workspace = true

# Randomness (per-datagram salt, QUIC obfs connection id / packet number).
rand.workspace = true

# Error handling.
thiserror.workspace = true

# Logging.
tracing.workspace = true

[lints]
workspace = true
